# github-webhook-gateway

./: .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile_gate  ReadMe.md  build.sh  config.yaml  config.yaml.template  deploy-forward.yaml  deploy.yaml  index.js  svc.yaml
kafka/: kafka-pv.yaml  values.yaml
src/: backend_task.rs  channel.rs  config_env.rs  constants.rs  event.rs  github.rs  github_issue.rs  lib.rs  message.rs  queue.rs  time_spent.rs  web.rs
src/channel/: consumer.rs  kafka_dest.rs  mod.rs  producer.rs  queue.rs
src/events/: mod.rs
src/events/github/: comment.rs  event.rs  handler.rs  mod.rs  pull_request.rs  repo.rs  review.rs  sender.rs  user.rs
src/events/msg/: consumer.rs  mod.rs  queue.rs  task.rs  time_spent.rs
src/events/rally/: handler.rs  mod.rs
src/github/: comment.rs  event.rs  issue.rs  owner.rs  pull_request.rs  repo.rs  review.rs  sender.rs  user.rs
src/handler/: github.rs  mod.rs  queue.rs  rally.rs
src/handler/msg/: consumer.rs  mod.rs  task.rs  time_spent.rs
src/kafka/: mod.rs
src/message/: consumer.rs  producer.rs
src/msg/: consumer.rs  github.rs  mod.rs  producer.rs  queue.rs  rally.rs  task.rs  time_spent.rs
src/rally/: mod.rs
src/web/: mod.rs
src/web/api/: github.rs  mod.rs  rally.rs
