[package]
name = "webhook-gateway"
version = "1.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A service to structure your call traces (call stacks)"
repository = "https://github.com/Celthi/github-webhook-gateway.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
serde = "1.0.0"
anyhow = "1.0"
poem = "1.2.59"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.2.24"
derive_builder ="0.11.2"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"]}
once_cell= "1.13.0"
tracing="0.1.36"
