[package]
version = "2.22.3"
edition = "2021"
name = "webhook-gateway"
license = "MIT OR Apache-2.0"
description = "A service to ingress github event"
repository = "https://github.com/Celthi/github-webhook-gateway.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0"
poem = "1.2"
tokio = { version = "1.12", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.2"
derive_builder ="0.11"
regex = "1.6"
reqwest = { version = "0.11", features = ["json"]}
once_cell= "1.13"
tracing="0.1"
[target.'cfg(unix)'.dependencies]
rdkafka = "0.28"
rand = "0.8"
colonbuilder = "0.1"
